[package]
name = "rust_lib_flutter_rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.40"
openssl = { version = "0.10.62", features = ["vendored"] }
openssl-sys = { version = "0.9.98", features = ["vendored"] }
zsign = { path = "/Users/lake/dounine/github/rust/rust-zsign", features = ["ssl-vendored"] }